Added the Karaoke drawer and player

--- a/index.jade
+++ b/index.jade
@@ -4,6 +4,8 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     title Draw text with HTML5 Canvas
     link(rel='stylesheet', href='stylesheets/style.css')
+    script(src='js/app/karaoke_drawer.js')
+    script(src='js/app/karaoke_player.js')
   body
     canvas#canvas
     script(src='js/app/app.js')
